--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "class-transform": "^0.7.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
