refactor: removed libs

--- a/package.json
+++ b/package.json
@@ -78,8 +78,6 @@
       "<rootDir>/apps/",
       "<rootDir>/libs/"
     ],
-    "moduleNameMapper": {
-      "^@shared/decorators(|/.*)$": "<rootDir>/libs/decorators/src/$1"
-    }
+    "moduleNameMapper": {}
   }
 }
