--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,13 +17,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "paths": {
-      "@shared/decorators": [
-        "libs/decorators/src"
-      ],
-      "@shared/decorators/*": [
-        "libs/decorators/src/*"
-      ]
-    }
+    "paths": {}
   }
 }
