--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
       "<rootDir>/apps/",
       "<rootDir>/libs/"
     ],
-    "moduleNameMapper": {}
+    "moduleNameMapper": {
+      "^@app/validators(|/.*)$": "<rootDir>/libs/validators/src/$1"
+    }
   }
 }
