feat: migrations generate to equalize database

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
  "code-runner.executorMap": {
   "javascript": "node",
   "typescript": "npx ts-node --files",
- }
+ },
+ "typescript.preferences.importModuleSpecifier": "relative",
 }
